# MarkovChainMonteCarlo

./: .gitignore  .ratexcludes  .travis.yml  Makefile  README.md  lighthouse.py  mcmc.Makefile  mcmc.c  mcmc_coordinator.Makefile  mcmc_coordinator.c  mcmc_coordinator_vertex.py  mcmc_vertex.py  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg  setup.py  spiNNakerGraphFrontEnd.cfg
.github/workflows/: c_actions.yml  python_actions.yml
c_models/: Makefile
c_models/mcmc_cholesky/: Makefile  mcmc_cholesky.c  mcmc_cholesky.h
c_models/mcmc_cholesky/src/: mcmc_cholesky.c  mcmc_cholesky.h
c_models/mcmc_coordinator/: Makefile
c_models/mcmc_coordinator/src/: mcmc_coordinator.c
c_models/mcmc_models/: Makefile  Makefile.common  cholesky.mk  mcmc.c  mcmc_common.mk  mcmc_model.h  mcmc_model_arma.mk  mcmc_model_common.mk  mcmc_model_lighthouse.mk  root_finder.mk
c_models/mcmc_models/examples/arma/: Makefile  arma.c  arma.h  loglikelihood.c  logprior.c
c_models/mcmc_models/examples/lighthouse/: Makefile  lighthouse.c  lighthouse.h
c_models/mcmc_models/src/: mcmc.c  mcmc_cholesky.c  mcmc_cholesky.h  mcmc_model.h  mcmc_root_finder.c  mcmc_spinn_real_type.h
c_models/mcmc_models/src/arma/: arma.h
c_models/mcmc_models/src/lighthouse/: lighthouse.c  lighthouse.h
c_models/mcmc_root_finder/: Makefile  mcmc_root_finder.c  mcmc_root_finder.h  root_finder.c  root_finder.h  spinn_real_type.h
c_models/mcmc_root_finder/src/: mcmc_root_finder.c  mcmc_root_finder.h  mcmc_spinn_real_type.h
mcmc/: _version.py  mcmc.py  mcmc_cholesky_vertex.py  mcmc_coordinator_vertex.py  mcmc_framework.py  mcmc_model.py  mcmc_parameter.py  mcmc_root_finder_vertex.py  mcmc_state_variable.py  mcmc_vertex.py
mcmc/model_binaries/: __init__.py
mcmc_examples/: __init__.py  lighthouse.py
mcmc_examples/arma/: __init__.py  arma.py  arma_fixed_point_model.py  arma_float_model.py  arma_model.py  data_1000.csv  data_10000.csv  spiNNakerGraphFrontEnd.cfg
mcmc_examples/lighthouse/: lighthouse.py  lighthouse_fixed_point_model.py  lighthouse_float_model.py  lighthouse_model.py  spiNNakerGraphFrontEnd.cfg
mcmc_integration_tests/: README.md  script_builder.py  test_scripts.py
unittests/: test_cfg_checker.py  test_import_all.py
(+4 files in other folders)
